# rust-webgl

./: .gitignore  Cargo.toml  README.md
rust-webgl-bin/: Cargo.toml  Makefile.toml
rust-webgl-bin/examples/: native.rs
rust-webgl-bin/src/: entrypoint.rs  lib.rs
rust-webgl-lib/: Cargo.toml
rust-webgl-lib/src/: application.rs  context.rs  lib.rs
rust-webgl-lib/src/resources/shaders/: default.frag  default.vs
